asr: add encoding support for runtime_data
